--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                             $('#inputName').val('');
                             $('#inputEmail').val('');
                             $('#inputNumber').val('');
-                            window.location.href = 'https://propertymerchants.in/thank-you.html';
+                            window.location.href = 'https://propertymerchants.vercel.app/thank-you.html';
                         } else {
                             alert("error");
                             $('.statusMsg').html('<span style="color:red;">Some problem occurred, please try again.</span>');
