changes in contact form

--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
 						</div>
 
 						<h3>Address</h3>
-						<p>131 Martens Place, Alexandra Hills, Australia.</p>
+						<p>office address - Shop No 14, Agrasen Tower, Near Pratap Cinema, Khopat, Thane (W) - 400601</p>
 					</div>
 					<!-- Contact Detail Item End -->
 				</div>
@@ -160,8 +160,7 @@
 						</div>
 
 						<h3>Phone</h3>
-						<p>(+0) 123 456 789<br>
-							(+1) 789 456 789</p>
+						<p>(+91) 9821 980 045</p>
 					</div>
 					<!-- Contact Detail Item End -->
 				</div>
@@ -174,7 +173,7 @@
 						</div>
 
 						<h3>Email</h3>
-						<p>Info@propertymerchant.com <br>sales@propertymerchant.com</p>
+						<p>contact@propertymerchants.in <br>sales@propertymerchant.in</p>
 					</div>
 					<!-- Contact Detail Item End -->
 				</div>
